<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".challenge.ChallengeAnimationActivity">

    <!-- Congratulatory text in rounded card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvCongrats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrats_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="20dp" />
    </androidx.cardview.widget.CardView>

    <!-- Points counter - fixed constraints -->
    <TextView
        android:id="@+id/tvPointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_earned_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/cardMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPoints"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/tvPointsLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvPointsLabel"
        app:layout_constraintStart_toEndOf="@id/tvPointsLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Dumbbell image - properly constrained -->
    <ImageView
        android:id="@+id/imgdumbell"
        android:layout_width="334dp"
        android:layout_height="358dp"
        android:scaleType="fitCenter"
        android:src="@drawable/dum"
        android:contentDescription="@string/dumbbell_image_description"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPointsLabel"
        app:layout_constraintVertical_bias="0.155" />

    <!-- Continue button -->
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:cornerRadius="32dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>