<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".workout.MainWorkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tWorkoutMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/workout_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="@color/yellow"
            android:layout_gravity="start"
            android:layout_marginEnd="240dp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        app:cardCornerRadius="32dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:useDefaultMargins="true"
                android:padding="16dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/addWorkout"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle"
                        android:layout_marginEnd="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/add_workout"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvWorkout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp" />
            </GridLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btHome"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:icon="@drawable/home"
                app:iconGravity="top"
                app:iconPadding="4dp"
                app:iconTint="@color/black"
                android:text="@string/home"
                android:textSize="11sp"
                android:textColor="@color/black"
                app:cornerRadius="70dp"
                android:backgroundTint="@color/white"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>